07 Jan 2009 Added x86_64 assembler byteswap assists - Jay Maynard
07 Jan 2009 msghld command with clear option - Bernard van der Helm
07 Jan 2009 msghldsec command - Bernard van der Helm
02 Jan 2009 Integrated 3270 console fixes - Jan Jaeger
02 Jan 2009 DVD-RAM IPL and RAMSAVE support - Jan Jaeger
02 Jan 2009 Optional ECHO/NOECHO to Diag8cmd statement - Ivan Warren
31 Dec 2008 Integrated 3270 (SYSG) console - Roger Bowler
30 Dec 2008 Allow $(LPARNAME) in herclogo file - Roger Bowler
23 Dec 2008 Allow symbol substitution in OAT files - Roger Bowler
22 Dec 2008 Implement Compare And Swap And Store Facility 2 - Ivan Warren
21 Dec 2008 Diag 224 fix - Ivan Warren
21 Dec 2008 Various SERVC READ_xxx_INFO fixes for specialty engines - Ivan Warren
08 Dec 2008 Fix Issue with ESA Guest on z/Arch and >2GB Storage - Ivan Warren
06 Dec 2008 Enable STFLE in ESA/390 mode - Ivan Warren
04 Dec 2008 Add ability to configure group name in --enable-setuid-hercifc= - Roger Bowler
02 Dec 2008 Support for PANTITLE when console is an xterm window - Roger Bowler
24 Nov 2008 Add processor type IL for IFL on engines statement - Jan Jaeger
02 Nov 2008 Correction to dasdtab entries for 3375 and 3380 - Roger Bowler
01 Nov 2008 Fix tapedev gettapetype_bydata function for HET/AWS tapes that
            start with a tapemark -- Liam Cold [liamcold@yahoo.com] by Fish
26 Oct 2008 Store_is within CMPSC will zero the remaining bits in the working byte,
            just like other famous manufacturers will do. All former generated compressed
            code will expand correctly, don't worry!! But their can be a difference
            in the compressed output. (This is the case when bits are on, but those
            are the unused bits after the last index symbol). - Bernard van der Helm
24 Oct 2008 Fix RC file not processed nor HAO thread engaged if -d daemon mode - Fish
11 Oct 2008 Fix MSVC build failure when 'rebase' utility doesn't exist - Fish