@@ -63,13 +63,13 @@ has instructions on his "<b>Building Hercules for Windows</b>" web page at
 <h3>Building from source - Linux and Mac OS X</h3>
 <ol>
 <li>Download the distribution file
-<a href="http://www.hercules-390.org/hercules-3.05.tar.gz">hercules-3.05.tar.gz</a>
+<a href="http://www.hercules-390.org/hercules-3.06.tar.gz">hercules-3.06.tar.gz</a>
 <br><em>Note:</em> By downloading this file you agree to the terms
     of the <a href="herclic.html">Q Public Licence</a>.
 <p>
 <li>Use these commands to unzip the distribution file:
-<pre>tar xvzf ../hercules-3.05.tar.gz
-cd hercules-3.05</pre>
+<pre>tar xvzf ../hercules-3.06.tar.gz
+cd hercules-3.06</pre>
 
 <li>Verify you have all of the correct versions of all of the
 required packages installed:
@@ -107,7 +107,7 @@ compiler and other software levels.
 <ol>
 <li>Download the RPM file you want:
 <ul>
-<li><a href="http://www.hercules-390.org/hercules-3.05-1.i686.rpm">hercules-3.05-1.i686.rpm</a>: Intel
+<li><a href="http://www.hercules-390.org/hercules-3.06-1.i686.rpm">hercules-3.06-1.i686.rpm</a>: Intel
 </ul>
 <li>Install the RPM:
 <br><code>rpm -Uvh</code> <i>RPMfile</i>
@@ -146,7 +146,7 @@ in subtle ways if the wrong optimization settings are used.</p>
 
 <ol>
 <li>Download the compressed disk image: <a
-href="http://www.hercules-390.org/hercules-3.05-tiger.dmg">hercules-3.05-tiger.dmg</a>.
+href="http://www.hercules-390.org/hercules-3.06-tiger.dmg">hercules-3.06-tiger.dmg</a>.
 This package is a universal binary and requires OS X version 10.4 (Tiger) or later.
 <li>Mount the image by double-clicking on it in the Finder.
 Your web browser may have done that for you already.
@@ -159,9 +159,9 @@ to install the supplied Tunnel driver.
 <h3>Installing on Windows (without Cygwin):</h3>
 <ol>
 <li>Download the <a
-href="http://www.hercules-390.org/hercules-3.05-native.exe">self-extracting
+href="http://www.hercules-390.org/hercules-3.06-native.exe">self-extracting
 Windows archive</a> or the <a
-href="http://www.hercules-390.org/hercules-3.05-native.msi">Windows
+href="http://www.hercules-390.org/hercules-3.06-native.msi">Windows
 Installer package</a>.
 <li>If you downloaded the self-extracting archive, simply execute it to
 install Hercules on your system. If you downloaded the Windows Installer
@@ -183,7 +183,7 @@ http://www.softdevlabs.com/Hercules/hercgui-index.html</a>.
 <h3>Installing on Windows with Cygwin:</h3>
 <ol>
 <li>
-Hercules 3.05 is now supplied as prebuilt binaries only in a native Windows
+Hercules 3.06 is now supplied as prebuilt binaries only in a native Windows
 version. This version will work perfectly well under Cygwin, as well as
 native Windows, and does not require any specific version of the Cygwin
 libraries. Follow the instructions above to install the native Windows
