@@ -77,7 +77,7 @@ The format of the dasdinit command is:
 <p><br>
 <pre>
 Hercules DASD image file creation program
-Version 3.05
+Version 3.06
 (c)Copyright 1999-2007 by Roger Bowler, Jan Jaeger, and others
 Builds an empty dasd image file:
 
