@@ -8,6 +8,28 @@ Hercules: What's new</TITLE>
       VLINK="#008040" ALINK="#000000">
 <h1>What's new in Hercules</h1>
 <hr noshade>
+<h2>What's new in release 3.06</h2>
+<p>Release date: 10 January 2009
+<ul>
+<li>Integrated 3270 (SYSG) and VT220 (SYSASCII) console support (Roger Bowler,
+Jan Jaeger)
+<li>HMC DVD-RAM read/write support (Jan Jaeger)
+<li>64-bit native version now supported on Mac OS X (Jay Maynard)
+<li>Ability to specify IFL, zIIP, and zAAP engine types (Roger Bowler, Jan
+Jaeger)
+<li>Important messages now held on command-line console (Bernard van der
+Helm, David "Fish" Trout)
+<li>Support for FLEX-ES FakeTape tape images (David "Fish" Trout; FLEX-ES and
+FakeTape are trademarks of Fundamental Software, Inc.)
+<li>More complete 3490 and 3590 tape support (David "Fish" Trout)
+<li>Solaris build support (Jeff Savit)
+<li>z10 instruction feature support (Roger Bowler, Jan Jaeger, Paul Leisy)
+<li>Many emulation fixes (Roger Bowler, Jan Jaeger, Ivan Warren, David
+"Fish" Trout, Greg Smith, Paul Leisy, Jay Maynard, Bernard van der Helm,
+Kevin Leonard, Tony Harminc)
+</ul>
+<p>Download
+<a href="http://www.hercules-390.org/hercules-3.06.tar.gz">hercules-3.06.tar.gz</a>
 <h2>What's new in release 3.05</h2>
 <p>Release date: 23 June 2007
 <ul>
