@@ -88,31 +88,32 @@ programmers is constantly at work implementing new features and fixing bugs.
 <li>Source tarball:
 <p>
 <ul>
-<li><a href="http://www.hercules-390.org/hercules-3.05.tar.gz">hercules-3.05.tar.gz</a>
+<li><a href="http://www.hercules-390.org/hercules-3.06.tar.gz">hercules-3.06.tar.gz</a>
 </ul>
 <p>
 <li>Linux:
 <p>
 <ul>
-<li><a href="http://www.hercules-390.org/hercules-3.05-1.i686.rpm">hercules-3.05-1.i686.rpm</a>: Intel RPM
-<li><a href="http://www.hercules-390.org/hercules-3.05-1.src.rpm">hercules-3.05-1.src.rpm</a>: Source
+<li><a href="http://www.hercules-390.org/hercules-3.06-1.i686.rpm">hercules-3.06-1.i686.rpm</a>: Intel RPM
+<li><a href="http://www.hercules-390.org/hercules-3.06-1.src.rpm">hercules-3.06-1.src.rpm</a>: Source
 RPM (if you want to build RPMs yourself)
 </ul>
 <p>
 <li>Windows native program:
 <p>
 <ul>
-<li><a href="http://www.hercules-390.org/hercules-3.05-native.msi">hercules-3.05-native.msi</a>:
+<li><a href="http://www.hercules-390.org/hercules-3.06-native.msi">hercules-3.06-native.msi</a>:
 Windows Installer package
-<li><a href="http://www.hercules-390.org/hercules-3.05-native.exe">hercules-3.05-native.exe</a>:
+<li><a href="http://www.hercules-390.org/hercules-3.06-native.exe">hercules-3.06-native.exe</a>:
 Binaries only self-extracting archive
 <p>
 <small>
-<b>Note:</b> if you haven't ever installed the MSVC (native) version of Hercules on your system before
-(i.e. if this is the first time you are installing it), please use the .msi Windows Installer package
-since it will ensure the required Microsoft support DLLs are also installed.
-If you are simply upgrading from a previous MSVC (native) installation however, then since you
-only need the new Hercules binaries (and not the MS support DLLs),
+<b>Note:</b> if you haven't ever installed the MSVC (native) version of
+Hercules on your system before (i.e. if this is the first time you are
+installing it), please use the .msi Windows Installer package since it will
+ensure the required Microsoft support DLLs are also installed. If you are
+simply upgrading from a previous MSVC (native) installation however, then
+since you only need the new Hercules binaries (and not the MS support DLLs),
 you may, if you wish, use the self-extracting archive instead.
 </small>
 </ul>
@@ -120,7 +121,7 @@ you may, if you wish, use the self-extracting archive instead.
 <li>Mac OS X:
 <p>
 <ul>
-<li><a href="http://www.hercules-390.org/hercules-3.05-tiger.dmg">hercules-3.05-tiger.dmg</a>: Mac OS X
+<li><a href="http://www.hercules-390.org/hercules-3.06-tiger.dmg">hercules-3.06-tiger.dmg</a>: Mac OS X
 10.4 (Tiger) universal binary version (with internationalization)
 </ul>
 </ul>
