@@ -1,3 +1,4 @@
+07 Jan 2009 Preliminary changes for 3.06 - Jay Maynard
 07 Jan 2009 Added x86_64 assembler byteswap assists - Jay Maynard
 07 Jan 2009 msghld command with clear option - Bernard van der Helm
 07 Jan 2009 msghldsec command - Bernard van der Helm
